<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/icon_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/icon_advanced_search"
            android:title="@string/advanced_search" />
        <item
            android:id="@+id/nav_my_list"
            android:title="@string/my_list"
            android:icon="@drawable/icon_my_list"/>
    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/nav_popular"
                android:title="@string/popular"
                android:icon="@drawable/icon_folder"/>
            <item
                android:id="@+id/nav_recently_updated"
                android:title="@string/recently_updated"
                android:icon="@drawable/icon_folder"/>
            <item
                android:id="@+id/nav_genres"
                android:title="@string/genres"
                android:icon="@drawable/icon_folder" />
            <item
                android:id="@+id/nav_services"
                android:title="@string/services"
                android:icon="@drawable/icon_folder"/>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_menu_manage"/>
    </group>

</menu>
