<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.streamsurfer.surfers.streamsurfer.SettingsActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <CheckBox
        android:id="@+id/notify_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_when_shows_update" />

    <Button
        android:id="@+id/demo_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_demo_notification" />
</LinearLayout>
