<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_advanced_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.streamsurfer.surfers.streamsurfer.AdvancedSearch"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:hint="Title (leave empty to get all)"
            android:ems="10"
            android:id="@+id/advanced_input" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45">

        <TextView
            android:text="@string/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/advanced_genre_text"
            android:gravity="center_horizontal"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/advanced_genre_list"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45">

        <TextView
            android:text="@string/service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/advanced_service_text"
            android:gravity="center_horizontal"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/advanced_service_list"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.10">


        <Button
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/advanced_button" />
    </LinearLayout>
</LinearLayout>
